[package]
name = "arc-cleaner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dioxus = { version = "0.7.3", features = ["desktop"] }
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[profile.release]
lto = true
codegen-units = 1
